syntax = "proto3";

package io.harness.perpetualtask.https;

option java_multiple_files = true;

message HttpsPerpetualTaskParams {
  bytes task_params = 1;
}